Implemented request status and receive status events. Need requirements for status tab

--- a/static/index.html
+++ b/static/index.html
@@ -296,6 +296,11 @@
             </table>
           </div>
         </div>
+		
+		  <div id="tabStatus">
+			
+		  </div>
+		
       </div>
     </div>
   </div>
