fix: tabStatus & no salary when in prison

--- a/static/index.html
+++ b/static/index.html
@@ -296,60 +296,60 @@
             </table>
           </div>
         </div>
-		
-		  <div id="tabStatus">
-			<table id="statustable" style="font-size:75%"> <!-- To-do: Fix style! -->
-				<tr>
-					<td>Geschlecht</td>
-					<td>Mehrheit</td>
-					<td>Alter</td>
-					<td>Bildungsstand</td>
-				</tr>
-				<tr>
-					<td><span id="statustab-sex"></span></td>
-					<td><span id="statustab-majority"></span></td>
-					<td><span id="statustab-age"></span></td>
-					<td><span id="statustab-education"></span></td>
-				</tr>
-				<tr>
-					<td>Sprachkurs</td>
-					<td>MR-Trainer</td>
-					<td>Führerschein</td>
-					<td>EDV-Kurs</td>
-				</tr>
-				<tr>
-					<td><span id="statustab-language"></span></td>
-					<td><span id="statustab-HrTrainer"></span></td>
-					<td><span id="statustab-getLicence"></span></td>
-					<td><span id="statustab-getIt"></span></td>
-				</tr>
-				<tr>
-					<td>MBA</td>
-					<td>EU-Bürger</td>
-					<td>Nostrifiziert</td>
-					<td>Aufenthalt</td>
-				</tr>
-				<tr>
-					<td><span id="statustab-Mba"></span></td>
-					<td><span id="statustab-EuCitizen"></span></td>
-					<td><span id="statustab-Nostrification"></span></td>
-					<td><span id="statustab-Residency"></span></td>
-				</tr>
-				<tr>
-					<td>Auto</td>
-					<td>Anwälte</td>
-					<td>Autoreparaturen</td>
-					<td>Gefängnisfreikarten</td>
-				</tr>
-				<tr>
-					<td><span id="statustab-Car"></span></td>
-					<td><span id="statustab-FreeLawyers"></span></td>
-					<td><span id="statustab-FreeCarRepairs"></span></td>
-					<td><span id="statustab-FreeJailbreaks"></span></td>
-				</tr>
-			</table>
-		  </div>
-		
+
+        <div id="tabStatus">
+          <table id="statustable">
+            <tr>
+              <td>Geschlecht</td>
+              <td>Mehrheit</td>
+              <td>Alter</td>
+              <td>Bildungsstand</td>
+            </tr>
+            <tr>
+              <td><span id="statustab-sex"></span></td>
+              <td><span id="statustab-majority"></span></td>
+              <td><span id="statustab-age"></span></td>
+              <td><span id="statustab-education"></span></td>
+            </tr>
+            <tr>
+              <td>Sprachkurs</td>
+              <td>MR-Trainer</td>
+              <td>Führerschein</td>
+              <td>EDV-Kurs</td>
+            </tr>
+            <tr>
+              <td><span id="statustab-language"></span></td>
+              <td><span id="statustab-HrTrainer"></span></td>
+              <td><span id="statustab-getLicence"></span></td>
+              <td><span id="statustab-getIt"></span></td>
+            </tr>
+            <tr>
+              <td>MBA</td>
+              <td>EU-Bürger</td>
+              <td>Nostrifiziert</td>
+              <td>Aufenthalt</td>
+            </tr>
+            <tr>
+              <td><span id="statustab-Mba"></span></td>
+              <td><span id="statustab-EuCitizen"></span></td>
+              <td><span id="statustab-Nostrification"></span></td>
+              <td><span id="statustab-Residency"></span></td>
+            </tr>
+            <tr>
+              <td>Auto</td>
+              <td>Anwälte</td>
+              <td>Autoreparaturen</td>
+              <td>Gefängnisfreikarten</td>
+            </tr>
+            <tr>
+              <td><span id="statustab-Car"></span></td>
+              <td><span id="statustab-FreeLawyers"></span></td>
+              <td><span id="statustab-FreeCarRepairs"></span></td>
+              <td><span id="statustab-FreeJailbreaks"></span></td>
+            </tr>
+          </table>
+        </div>
+
       </div>
     </div>
   </div>
