--- a/static/index.html
+++ b/static/index.html
@@ -11,9 +11,9 @@
   <source src="media/sounds/background.mp3" type="audio/mpeg">
 </audio>
 <div id="options">
-  <img id="optionsSettings" src="media/buttons/settings1.png" onclick="showOptions()" alt="Menü anzeigen"/>
-  <img id="optionsSoundOn" src="media/buttons/sound_off.png" onclick="soundOn()" alt="Ton ein"/>
-  <img id="optionsSoundOff" src="media/buttons/sound_on.png" onclick="soundOff()" style="display:none;" alt="Ton aus"/>
+  <img id="optionsSettings" src="../media/buttons/settings.svg" onclick="showOptions()" alt="Menü anzeigen"/>
+  <img id="optionsSoundOn" src="../media/buttons/sound_off.svg" onclick="soundOn()" alt="Ton ein"/>
+  <img id="optionsSoundOff" src="../media/buttons/sound_on.svg" onclick="soundOff()" style="display:none;" alt="Ton aus"/>
 </div>
 <div id="playerlist">
   <!-- to be filled dynamically -->
